# hostcomputer

./: .gitignore  CLAUDE.md  CMakeLists.txt  QSerialPort使用示例.md  TCP_JSON协议文档.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  test_tcp_server.py  test_yaocao.cpp  yaocao_usage_example.cpp  环境配置指南.md  项目架构通信机制.md
build_test/: CMakeCache.txt
deploy/systemd/: mediamtx.service  robot-video-stack.env.example  robot-video-stack.service
docs/: FFmpeg开发环境安装指南.md  ROS1桥接节点本机回环计划.md  SDL手柄适配计划.md  development-guide.md  上位机部署说明.md  下位机Bridge双层架构与调试UI计划.md  下位机视频栈快速启动.md  下位机视频栈配置文档.md  手柄键盘控制说明.md  机械臂专用ROS1节点开发文档.md  视频推流与摄像头管理方案.md  通信与视频链路改造计划.md
resources/: CMakeLists.txt
ros1_bridge/: CMakeLists.txt  bridge_control.yaml  bridge_core.py  bridge_protocol.py  bridge_state.py  debug_ui.py  host_bridge_node.py  mediamtx_launcher.sh  output_adapters.py  package.xml  ros_image_rtsp.example.yaml  video_manager.py  video_manager_ipc.py  video_manager_node.py  video_sources.example.yaml  video_sources.local.yaml  video_stack.sh
ros1_bridge/launch/: video_stack.launch
ros1_bridge/src/: ros_image_rtsp_node.cpp
scripts/: bridge_loopback_test.py  check_host_runtime.py  mock_ros1_server.py  run_all_tests.sh  smoke_test.sh  sync_ros1_bridge.py  video_manager_smoke_test.py
src/: test_syntax.cpp
src/communication/: CMakeLists.txt  HostProtocol.cpp  HostProtocol.h  ROS1TcpClient.cpp  ROS1TcpClient.h  SharedStructs.h  serialportmanager.cpp  serialportmanager.h
src/controller/: CMakeLists.txt  CameraGridWidget.cpp  CameraGridWidget.h  CameraManager.cpp  CameraManager.h  CameraManager_simple.cpp  CameraManager_simple.h  FfmpegRtspDecoder.cpp  FfmpegRtspDecoder.h  GamepadDisplayWidget.cpp  GamepadDisplayWidget.h  KeyboardController.cpp  KeyboardController.h  MotorRuntimeCarouselWidget.cpp  MotorRuntimeCarouselWidget.h  RobotAttitudeWidget.cpp  RobotAttitudeWidget.h  RtspPlayerWidget.cpp  RtspPlayerWidget.h  VideoFrameWidget.cpp  VideoFrameWidget.h  VideoWidget.cpp  VideoWidget.h  controller.cpp  controller.h  handlekey.cpp  handlekey.h  vehicleController.h  yaocao.cpp  yaocao.h
src/model/: CMakeLists.txt
src/parser/: CMakeLists.txt  ProtocolParser.cpp  ProtocolParser.h  motor_state.h  parser.cpp  parser.h
src/utils/: CMakeLists.txt  ErrorHandler.cpp  ErrorHandler.h  Logger.cpp  Logger.h
