<?xml version="1.0"?>
<package format="2">
  <name>ros1_bridge</name>
  <version>0.1.0</version>
  <description>TCP/JSON host bridge and RTSP video lifecycle manager for the lower machine.</description>

  <maintainer email="rera@example.com">rera</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <export>
  </export>
</package>
