# ============================================
# Communication B (ïŋ―B)
# ============================================
# L#
#   - ïŋ― CAN / Serial / TCP Iïŋ―ïŋ―
#   - ïŋ―ïŋ―ïŋ―6ïŋ―ïŋ―pn'
#   - ïŋ― signal ïŋ―60ïŋ―pnïŋ―ïŋ― Controller
#
# ïŋ―Vïŋ―
#   - ïŋ―ïŋ―ïŋ―V Qt::Core, Qt::Network, Qt::SerialPort
#   - ïŋ―ïŋ―V Controller / UI / Parser
#   - ïŋ― signal/slot  Controller ïŋ―
# ============================================

set(COMMUNICATION_SOURCES
    canmanager.cpp
    canmanager.h
    serialportmanager.cpp
    serialportmanager.h
    SharedStructs.h
)

# ïŋ―Yïŋ―
add_library(communication_layer STATIC ${COMMUNICATION_SOURCES})

# éūæĨQtåš - æŊæQt5/Qt6
if(QT_VERSION EQUAL 6)
    target_link_libraries(communication_layer PUBLIC
        Qt6::Core
        Qt6::Network
        Qt6::SerialPort
    )
else()
    target_link_libraries(communication_layer PUBLIC
        Qt5::Core
        Qt5::Network
        Qt5::SerialPort
    )
endif()

# ïŋ―n4ïŋ―ïŋ―+ïŋ―
target_include_directories(communication_layer PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}
)
