# ============================================
# Model B (pn!пњљB)
# ============================================
# L#
#   - : UI –Ыпњљ—Ъпњљpn!пњљ (QObject + Q_PROPERTY)
#   - пњљ signal/slot пњљпњљ UI
#
# пњљVпњљ
#   - пњљпњљпњљV Qt::Core
#   - пњљпњљV Parser / Communication / Controller
#   - 1 Controller #пњљпњљ Model pn
# ============================================

set(MODEL_SOURCES
    motormodel.cpp
    motormodel.h
)

# пњљYпњљ
add_library(model_layer STATIC ${MODEL_SOURCES})

# йУЊжО•Qt::Core - жФѓжМБQt5/Qt6
if(QT_VERSION EQUAL 6)
    target_link_libraries(model_layer PUBLIC Qt6::Core)
else()
    target_link_libraries(model_layer PUBLIC Qt5::Core)
endif()

# пњљn4пњљпњљ+пњљ
target_include_directories(model_layer PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}
)
